# prevision-du-Trafic-Cyclable

./: .gitignore  main.py  pyproject.toml
.github/workflows/: ingestion.yaml
app/backend/: entrainement_pipeline.ipynb
common/: pyproject.toml
common/src/common/database/: database.py
notebooks/:  exploration.ipynb  exploration.ipynb  exploration_mat.ipynb  pyproject.toml
services/backend/: app.py  pred_client.py  pyproject.toml  routes.py
services/frontend/: Dockerfile  app.py  pyproject.toml
services/ingestion/: pyproject.toml
services/ingestion/src/: api_fetcher.py  data_transformer.py  db_handler.py  db_inserter.py  forecast_handler.py  main.py  pipeline.py
services/prediction/: app.py  predict.py  pyproject.toml
services/prediction/models/: metrics.json  xgb_model.pkl
services/training/:  run_training.py  Dockerfile  pyproject.toml
services/training/models/: metrics.json  xgb_model.pkl
services/training/pipeline/: config.py  data_loader.py  evaluate.py  main.py  preprocessing.py  save.py  test.py  train.py
