[project]
name = "prevision-du-trafic-cyclable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydeck>=0.9.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.52.0",
]

[tool.uv.workspace]
members = [
    "services/training",
    "services/frontend",
]
