[project]
name = "prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.3",
    "joblib>=1.5.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]
